--- a/maps/production.yaml
+++ b/maps/production.yaml
@@ -2,12 +2,14 @@ rackspace-wheezy-1GB:
   - app01.project-boss.net:
     minion:
       grains:
+        environment: production
         roles:
           - app
           - web
   - app02.project-boss.net:
     minion:
       grains:
+        environment: production
         roles:
           - app
           - web
@@ -16,6 +18,7 @@ rackspace-wheezy-1GB:
   - data01.project-boss.net:
     minion:
       grains:
+        environment: production
         roles:
           - couchbase
           - solr_master
@@ -24,6 +27,7 @@ rackspace-wheezy-1GB:
   - data02.project-boss.net:
     minion:
       grains:
+        environment: production
         roles:
           - couchbase
           - solr
