--- a/maps/production.yaml
+++ b/maps/production.yaml
@@ -1,11 +1,11 @@
 rackspace-wheezy-1GB:
   - app01.project-boss.net:
-      minion:
-        grains:
-          environment: production
-          roles:
-            - app
-            - web
+    minion:
+#        grains:
+#          environment: production
+#          roles:
+#            - app
+#            - web
 #  - app02.project-boss.net:
 #      minion:
 #        grains:
