--- a/maps/production.yaml
+++ b/maps/production.yaml
@@ -1,10 +1,7 @@
 rackspace-wheezy-1GB:
   - app01.project-boss.net
       grains:
-#          environment: production
-        roles:
-          - app
-          - web
+        some: thing
 #  - app02.project-boss.net:
 #      minion:
 #        grains:
