maps - install app also on jobs01

--- a/maps/production.yaml
+++ b/maps/production.yaml
@@ -28,10 +28,8 @@ rackspace-wheezy-1GB:
       grains:
         environment: production
         roles:
+          - app
           - cronjobs
 
-#rackspace-wheezy-1GB:
-#	- jobs01
-#
-#rackspace-wheezy-1GB:
-#	- dwh01
+#  - dwh01.project-boss.net:
+
