Updated ES stuff and some saltstack -> do not touch headers <-

--- a/salt/mysql-server/files/etc/mysql/my.cnf
+++ b/salt/mysql-server/files/etc/mysql/my.cnf
@@ -1,5 +1,5 @@
 ###############################################################################
-## this file is managed by saltstack
+##       This file is managed by saltstack - DO NOT MANUALLY CHANGE IT       ##
 ###############################################################################
 
 [client]
