--- a/salt/nginx/files/nginx.conf
+++ b/salt/nginx/files/nginx.conf
@@ -1,6 +1,6 @@
-###
-### This file is maintained by salt
-###
+###############################################################################
+##       This file is managed by saltstack - DO NOT MANUALLY CHANGE IT       ##
+###############################################################################
 
 user www-data;
 worker_processes 4;
