--- a/salt/php/files/opcache.ini
+++ b/salt/php/files/opcache.ini
@@ -1,2 +1,7 @@
 zend_extension=/usr/lib/php5/20100525/opcache.so
 opcache.enable_cli=1
+opcache.max_accelerated_files=4096
+opcache.memory_consumption=128
+opcache.interned_strings_buffer=8
+opcache.fast_shutdown=1
+opcache.revalidate_freq=60
