--- a/maps/prod.yaml
+++ b/maps/prod.yaml
@@ -1,17 +1,17 @@
 rackspace-wheezy-2GB:
-  - app01.prod.project-boss.net:
+  - app01.project-boss.net:
       grains:
         deployment: prod
         roles:
           - app
           - web
-  - app02.prod.project-boss.net:
+  - app02.project-boss.net:
       grains:
         deployment: prod
         roles:
           - app
           - web
-  - jobs01.prod.project-boss.net:
+  - jobs01.project-boss.net:
       grains:
         deployment: prod
         roles:
@@ -19,7 +19,7 @@ rackspace-wheezy-2GB:
           - cronjobs
 
 rackspace-wheezy-4GB:
-  - data01.prod.project-boss.net:
+  - data01.project-boss.net:
       grains:
         deployment: prod
         roles:
@@ -29,7 +29,7 @@ rackspace-wheezy-4GB:
           - queue
           - elasticsearch
         solr_role: master
-  - data02.prod.project-boss.net:
+  - data02.project-boss.net:
       grains:
         deployment: prod
         roles:
