Renamed lumberjack index

--- a/salt/logstash/files/etc/logstash/conf.d/lumberjack.conf
+++ b/salt/logstash/files/etc/logstash/conf.d/lumberjack.conf
@@ -23,7 +23,7 @@ output {
     if "{{environment}}" in [tags] {
       elasticsearch_http {
         host => "localhost"
-        index => "logstash_yvesandzed_{{environment}}_%{+YYYY-MM-dd}"
+        index => "lumberjack_{{environment}}_%{+YYYY-MM-dd}"
       }
     }
 {% endfor%}
