add nginx files

--- a/salt/nginx/files/yzed/static.conf
+++ b/salt/nginx/files/yzed/static.conf
@@ -1,6 +1,6 @@
 ###
 ### Common Static settings (to be included in vhost definition)
-### This file is maintained by puppet!
+### This file is maintained by salt
 ###
 
     # Protected files - require password, no caching
