--- a/salt/nginx/files/yzed/yves.conf
+++ b/salt/nginx/files/yzed/yves.conf
@@ -1,73 +1,7 @@
 ###
 ### Common Yves settings (to be included in vhost definition)
-### This file is maintained by puppet!
+### This file is maintained by salt
 ###
-
-    # rewrite to new themenwelten
-    location ~ ^/kaese {
-        if ($query_string ~ "^(.*)$") {
-            return 301 http://www.migusta.de/themenwelten/kaese?$1;
-        }
-    }
-
-    # rewrite to new themenwelten
-    location ~ ^/geschenkideen {
-        if ($query_string ~ "^(.*)$") {
-            return 301 http://www.migusta.de/themenwelten/geschenkideen?$1;
-        }
-    }
-
-    # rewrite to new themenwelten
-    location ~ ^/crepes {
-        if ($query_string ~ "^(.*)$") {
-            return 301 http://www.migusta.de/themenwelten/crepes?$1;
-        }
-    }
-
-    # rewrite to new themenwelten
-    location ~ ^/auflaeufe-und-gratin {
-        if ($query_string ~ "^(.*)$") {
-            return 301 http://www.migusta.de/themenwelten/auflaeufe-und-gratin?$1;
-        }
-    }
-
-    # rewrite to new themenwelten
-    location ~ ^/vitamine-im-winter {
-        if ($query_string ~ "^(.*)$") {
-            return 301 http://www.migusta.de/themenwelten/vitamine-im-winter?$1;
-        }
-    }
-
-    # rewrite to new themenwelten
-    location ~ ^/soup {
-        if ($query_string ~ "^(.*)$") {
-            return 301 http://www.migusta.de/themenwelten/soup?$1;
-        }
-    }
-
-    # rewrite invalid link from ck newsletter, ! remove afterwards
-    location ~ ^/wok {
-        if ($query_string ~ "^wmc=Koop\.CK\.product\.20140201\&utm_medium=koop\&utm_source=ck\&utm_campaign=20140201\&utm_content=product(.*)$") {
-            return 301 http://www.migusta.de/themenwelten/Gruenkohl?wmc=Koop.CK.product.20140116&utm_medium=koop&utm_source=ck&utm_campaign=20140116&utm_content=product#article-165132;
-        }
-        if ($query_string ~ "^(.*)$") {
-            return 301 http://www.migusta.de/themenwelten/wok?$1;
-        }
-    }
-
-    # rewrite to new themenwelten
-    location ~ ^/kraeuter {
-        if ($query_string ~ "^(.*)$") {
-            return 301 http://www.migusta.de/themenwelten/kraeuter?$1;
-        }
-    }
-
-    # rewrite to new themenwelten
-    location ~ ^/Gruenkohl2 {
-        if ($query_string ~ "^(.*)$") {
-            return 301 http://www.migusta.de/themenwelten/Gruenkohl2?$1;
-        }
-    }
 
     # Static files - allow only specified here paths
     # all other resources should be served via static host (and cached, if possible, via reverse proxy or cdn)
@@ -124,8 +58,8 @@
           add_header "Access-Control-Allow-Origin" $http_origin;
         }
  
-	# Frontend - force browser to use new rendering engine
-	more_set_headers "X-UA-Compatible: IE=Edge,chrome=1";
+    	# Frontend - force browser to use new rendering engine
+    	more_set_headers "X-UA-Compatible: IE=Edge,chrome=1";
 
         # Terminate OPTIONS requests immediately. No need for calling php
         # OPTIONS is used by Ajax from http to https as a pre-flight-request
@@ -143,7 +77,7 @@
         fastcgi_param APPLICATION_STORE $application_store;
         fastcgi_param SCRIPT_FILENAME  $document_root/index.php;
         more_clear_headers 'X-Powered-By' 'X-Store' 'X-Locale' 'X-Env' 'Server'; 
-   }
+    }
 
     # Maintenance page
     error_page 503 @maintenance;
