--- a/salt/nginx/files/yzed/zed.conf
+++ b/salt/nginx/files/yzed/zed.conf
@@ -1,6 +1,6 @@
 ###
 ### Common Zed settings (to be included in vhost definition)
-### This file is maintained by puppet!
+### This file is maintained by salt
 ###
 
     # Timeout for ZED requests - 10 minutes
