--- a/salt/app/files/fpm/zed.conf
+++ b/salt/app/files/fpm/zed.conf
@@ -1,4 +1,4 @@
-{%- set number_of_processes = grains.num_cpus * 4 %}
+{%- set number_of_processes = grains.num_cpus * 4 -%}
 [{{ environment }}-zed]
 
 listen = /tmp/.fpm.$pool.sock
