--- a/salt/app/files/fpm/zed.conf
+++ b/salt/app/files/fpm/zed.conf
@@ -24,7 +24,7 @@ chdir = /
 
 php_admin_value[memory_limit] = 2048M
 {%- if environment == "production" %}
-php_admin_value[display_errors] = no" if environment=="production" %>
+php_admin_value[display_errors] = no
 {%- endif %}
 php_admin_value[newrelic.appname] = "Zed ({{ environment }})"
 php_admin_value[newrelic.framework] = "zend"
