--- a/salt/app/files/nginx/sites-available/XX-zed.conf
+++ b/salt/app/files/nginx/sites-available/XX-zed.conf
@@ -16,7 +16,7 @@ server {
 
     root /data/shop/{{ environment }}/current/static/public/Zed;
 
-{%- if store_details.zed.htpasswd_file is defined }
+{%- if store_details.zed.htpasswd_file is defined %}
     auth_basic            "Restricted Files";
     auth_basic_user_file  {{ store_details.zed.htpasswd_file }};
 {%- endif %}
