--- a/salt/app/files/nginx/sites-available/XX-zed.conf
+++ b/salt/app/files/nginx/sites-available/XX-zed.conf
@@ -4,19 +4,19 @@
 
 server {
     # Listener for production/staging - requires external LoadBalancer directing traffic to this port
-    listen {{ store_details.zed.port }} default;
+    listen {{ environment_details.stores[store].zed.port }} default;
     
     # Listener for testing/development - one host only, doesn't require external LoadBalancer
     listen 80;
 
-    server_name {{ store_details.zed.hostname }};
+    server_name {{ environment_details.stores[store].zed.hostname }};
 
     keepalive_timeout 0;
     access_log  /data/logs/{{ environment }}/zed-access.log extended;
 
     root /data/shop/{{ environment }}/current/static/public/Zed;
 
-{%- if store_details.zed.htpasswd_file is defined %}
+{%- if environment_details.stores[store].zed.htpasswd_file is defined %}
     auth_basic            "Restricted Files";
     auth_basic_user_file  {{ store_details.zed.htpasswd_file }};
 {%- endif %}
