--- a/salt/app/files/nginx/sites-available/XX-zed.conf
+++ b/salt/app/files/nginx/sites-available/XX-zed.conf
@@ -18,7 +18,7 @@ server {
 
 {%- if environment_details.stores[store].zed.htpasswd_file is defined %}
     auth_basic            "Restricted Files";
-    auth_basic_user_file  {{ store_details.zed.htpasswd_file }};
+    auth_basic_user_file  {{ environment_details.stores[store].zed.htpasswd_file }};
 {%- endif %}
 
     set $application_env {{ environment }};
