fpm - adjust number of processes

--- a/salt/app/files/fpm/zed.conf
+++ b/salt/app/files/fpm/zed.conf
@@ -1,4 +1,8 @@
+{%- if environment == "production" -%}
 {%- set number_of_processes = grains.num_cpus * 4 -%}
+{%- else -%}
+{%- set number_of_processes = 2 -%}
+{%- endif -%}
 [{{ environment }}-zed]
 
 listen = /tmp/.fpm.$pool.sock
