--- a/salt/nginx/files/conf.d/allow-ip.conf
+++ b/salt/nginx/files/conf.d/allow-ip.conf
@@ -7,7 +7,7 @@
 # Localhost
 allow 127.0.0.1/32;
 
-# Cloud internal
+# Allow all private nets (there's a firewall on ServiceNet, so it's safe)
 allow 10.0.0.0/8;
 
 
