--- a/salt/tomcat/files/newrelic/newrelic.yml
+++ b/salt/tomcat/files/newrelic/newrelic.yml
@@ -42,7 +42,7 @@ common: &default_settings
   # For example, to report data to"My Application" and "My Application 2" use this:
   # app_name: My Application;My Application 2
   # This setting is required.
-  app_name: Tomcat (production)
+  app_name: Tomcat(production)
 
   # The agent uses its own log file to keep its logging
   # separate from that of your application.  Specify the log level here.
@@ -211,15 +211,15 @@ common: &default_settings
 
 development:
   <<: *default_settings
-  app_name: Tomcat (Development)
+  app_name: Tomcat(development)
 
 test:
   <<: *default_settings
-  app_name: Tomcat (Test)
+  app_name: Tomcat(test)
 
 production:
   <<: *default_settings
 
 staging:
   <<: *default_settings
-  app_name: Tomcat (Staging)
+  app_name: Tomcat(staging)
