Mysql changes, removed dev grain

--- a/salt/mysql-server/files/etc/mysql/my.cnf
+++ b/salt/mysql-server/files/etc/mysql/my.cnf
@@ -26,8 +26,8 @@ max_allowed_packet             = 64M
 max_connect_errors             = 1000000
 
 # DATA STORAGE #
-datadir                        = /data/mysql/data
-tmpdir                         = /data/mysql/temp
+#datadir                        = /data/mysql/data
+#tmpdir                         = /data/mysql/temp
 
 # CACHES AND LIMITS #
 tmp_table_size                 = 128M
@@ -47,7 +47,6 @@ innodb_log_file_size           = 256M
 innodb_flush_log_at_trx_commit = 2
 innodb_file_per_table          = 1
 innodb_buffer_pool_size        = 128M
-innodb_lazy_drop_table         = 1
 
 # LOGGING #
 log_error                      = /var/log/mysql/error.log
