--- a/salt/app/files/fpm/yves.conf
+++ b/salt/app/files/fpm/yves.conf
@@ -18,7 +18,7 @@ pm.max_spare_servers = {{ number_of_processes }}
 ; Avoid PHP memory leaks
 pm.max_requests = 50
 
-pm.status_path = /php-fpm-status-{{ environment }}-zed
+pm.status_path = /php-fpm-status-{{ environment }}-yves
 ping.path = /fpm-ping.php
 ping.response = OK
 
