Changed mysql settings (not currently used), reenabled development state

--- a/salt/mysql-server/files/etc/mysql/my.cnf
+++ b/salt/mysql-server/files/etc/mysql/my.cnf
@@ -26,8 +26,8 @@ max_allowed_packet             = 64M
 max_connect_errors             = 1000000
 
 # DATA STORAGE #
-#datadir                        = /data/mysql/data
-#tmpdir                         = /data/mysql/temp
+datadir                        = /var/lib/mysql
+tmpdir                         = /tmp
 
 # CACHES AND LIMITS #
 tmp_table_size                 = 128M
