--- a/maps/prod.yaml
+++ b/maps/prod.yaml
@@ -1,17 +1,17 @@
 rackspace-wheezy-2GB:
-  - app01.project-boss.net:
+  - app01.project-yz.com:
       grains:
         deployment: prod
         roles:
           - app
           - web
-  - app02.project-boss.net:
+  - app02.project-yz.com:
       grains:
         deployment: prod
         roles:
           - app
           - web
-  - jobs01.project-boss.net:
+  - jobs01.project-yz.com:
       grains:
         deployment: prod
         roles:
@@ -19,7 +19,7 @@ rackspace-wheezy-2GB:
           - cronjobs
 
 rackspace-wheezy-4GB:
-  - data01.project-boss.net:
+  - data01.project-yz.com:
       grains:
         deployment: prod
         roles:
@@ -30,7 +30,7 @@ rackspace-wheezy-4GB:
           - elasticsearch
         solr_role: master
         couchbase_role: master
-  - data02.project-boss.net:
+  - data02.project-yz.com:
       grains:
         deployment: prod
         roles:
@@ -42,5 +42,5 @@ rackspace-wheezy-4GB:
 
 
 
-#  - dwh01.project-boss.net:
+#  - dwh01.project-yz.com:
 
