Changed opcode cache settings in dev vm

--- a/salt/php/files/opcache.ini
+++ b/salt/php/files/opcache.ini
@@ -3,5 +3,9 @@ opcache.enable_cli=1
 opcache.max_accelerated_files=4096
 opcache.memory_consumption=128
 opcache.interned_strings_buffer=8
+{%- if 'dev' in grains.roles %}
 opcache.fast_shutdown=1
+{%- else -%}
+opcache.fast_shutdown=60
+{%- endif -%}
 opcache.revalidate_freq=60
