--- a/salt/app/files/nginx/sites-available/XX-zed.conf
+++ b/salt/app/files/nginx/sites-available/XX-zed.conf
@@ -1,6 +1,6 @@
-###
-###  This file is maintained by puppet
-###
+###############################################################################
+##       This file is managed by saltstack - DO NOT MANUALLY CHANGE IT       ##
+###############################################################################
 
 server {
     # Listener for production/staging - requires external LoadBalancer directing traffic to this port
