Removed unneeded files

--- a/salt/pound/files/etc/pound/pound.cfg
+++ b/salt/pound/files/etc/pound/pound.cfg
@@ -25,43 +25,43 @@ ListenHTTPS
         AddHeader "X-Forwarded-Proto: https"
 End
 
-## zed.project-yz.com
-ListenHTTPS
-        Address 0.0.0.0
-        Port    443
-        RewriteLocation 0
-
-        xHTTP           1
-        Service
-                BackEnd
-                        Address 0.0.0.0
-                        Port    80
-                End
-        End
-        # Cert must contain file with key, cert and complete ca-bundle of CA
-        Cert "/etc/pound/certs/star_migusta_de"
-        Ciphers "ECDHE-RSA-AES128-SHA256:AES128-GCM-SHA256:RC4:HIGH:!MD5:!aNULL:!EDH"
-        AddHeader "X-Forwarded-Proto: https"
-End
+### zed.project-yz.com
+#ListenHTTPS
+#        Address 0.0.0.0
+#        Port    443
+#        RewriteLocation 0
+#
+#        xHTTP           1
+#        Service
+#                BackEnd
+#                        Address 0.0.0.0
+#                        Port    80
+#                End
+#        End
+#        # Cert must contain file with key, cert and complete ca-bundle of CA
+#        Cert "/etc/pound/certs/star_migusta_de"
+#        Ciphers "ECDHE-RSA-AES128-SHA256:AES128-GCM-SHA256:RC4:HIGH:!MD5:!aNULL:!EDH"
+#        AddHeader "X-Forwarded-Proto: https"
+#End
 
 ## static.project-yz.com
-ListenHTTPS
-        Address 0.0.0.0
-        Port    443
-        RewriteLocation 0
-
-        xHTTP           1
-        Service
-                BackEnd
-                        Address 0.0.0.0
-                        Port    80
-                End
-        End
-        # Cert must contain file with key, cert and complete ca-bundle of CA
-        Cert "/etc/pound/certs/star_migusta_de"
-        Ciphers "ECDHE-RSA-AES128-SHA256:AES128-GCM-SHA256:RC4:HIGH:!MD5:!aNULL:!EDH"
-        AddHeader "X-Forwarded-Proto: https"
-End
+#ListenHTTPS
+#        Address 0.0.0.0
+#        Port    443
+#        RewriteLocation 0
+#
+#        xHTTP           1
+#        Service
+#                BackEnd
+#                        Address 0.0.0.0
+#                        Port    80
+#                End
+#        End
+#        # Cert must contain file with key, cert and complete ca-bundle of CA
+#        Cert "/etc/pound/certs/star_migusta_de"
+#        Ciphers "ECDHE-RSA-AES128-SHA256:AES128-GCM-SHA256:RC4:HIGH:!MD5:!aNULL:!EDH"
+#        AddHeader "X-Forwarded-Proto: https"
+#End
 
 # ## *-staging.project-yz.com
 # ListenHTTPS
