--- a/salt/pound/files/etc/pound/pound.cfg
+++ b/salt/pound/files/etc/pound/pound.cfg
@@ -39,7 +39,7 @@ End
 #                End
 #        End
 #        # Cert must contain file with key, cert and complete ca-bundle of CA
-#        Cert "/etc/pound/certs/star_migusta_de"
+#        Cert "/etc/pound/certs/star_project_yz.com"
 #        Ciphers "ECDHE-RSA-AES128-SHA256:AES128-GCM-SHA256:RC4:HIGH:!MD5:!aNULL:!EDH"
 #        AddHeader "X-Forwarded-Proto: https"
 #End
@@ -58,7 +58,7 @@ End
 #                End
 #        End
 #        # Cert must contain file with key, cert and complete ca-bundle of CA
-#        Cert "/etc/pound/certs/star_migusta_de"
+#        Cert "/etc/pound/certs/star_project_yz.com"
 #        Ciphers "ECDHE-RSA-AES128-SHA256:AES128-GCM-SHA256:RC4:HIGH:!MD5:!aNULL:!EDH"
 #        AddHeader "X-Forwarded-Proto: https"
 #End
@@ -77,7 +77,7 @@ End
 #                 End
 #         End
 #         # Cert must contain file with key, cert and complete ca-bundle of CA
-#         Cert "/etc/pound/certs/star_migusta_de"
+#         Cert "/etc/pound/certs/star_project_yz.com"
 #         Ciphers "ECDHE-RSA-AES128-SHA256:AES128-GCM-SHA256:RC4:HIGH:!MD5:!aNULL:!EDH"
 #         AddHeader "X-Forwarded-Proto: https"
 # End
