--- a/salt/pound/files/etc/pound/pound.cfg
+++ b/salt/pound/files/etc/pound/pound.cfg
@@ -20,7 +20,7 @@ ListenHTTPS
                 End
         End
         # Cert must contain file with key, cert and complete ca-bundle of CA
-        Cert "/etc/pound/certs/star_project_yz_com
+        Cert "/etc/pound/certs/star_project_yz_com"
         Ciphers "ECDHE-RSA-AES128-SHA256:AES128-GCM-SHA256:RC4:HIGH:!MD5:!aNULL:!EDH"
         AddHeader "X-Forwarded-Proto: https"
 End
