Use PVHVM images

--- a/cloud.profiles.d/rackspace.conf
+++ b/cloud.profiles.d/rackspace.conf
@@ -1,19 +1,19 @@
 rackspace-wheezy-1GB:
   provider: rackspace
   size: 1 GB Performance
-  image: Debian 7 (Wheezy)
+  image: Debian 7 (Wheezy) (PVHVM)
 
 rackspace-wheezy-2GB:
   provider: rackspace
   size: 2 GB Performance
-  image: Debian 7 (Wheezy)
+  image: Debian 7 (Wheezy) (PVHVM)
 
 rackspace-wheezy-4GB:
   provider: rackspace
   size: 4 GB Performance
-  image: Debian 7 (Wheezy)
+  image: Debian 7 (Wheezy) (PVHVM)
 
 rackspace-wheezy-8GB:
   provider: rackspace
   size: 8 GB Performance
-  image: Debian 7 (Wheezy)
+  image: Debian 7 (Wheezy) (PVHVM)
