Create prod- and qa- cloud providers with different environment settings, apply changes to prod map

--- a/cloud.profiles.d/rackspace.conf
+++ b/cloud.profiles.d/rackspace.conf
@@ -1,19 +1,39 @@
-rackspace-wheezy-1GB:
-  provider: rackspace
+prod-rackspace-wheezy-1GB:
+  provider: prod-rackspace
   size: 1 GB Performance
   image: Debian 7 (Wheezy) (PVHVM)
 
-rackspace-wheezy-2GB:
-  provider: rackspace
+prod-rackspace-wheezy-2GB:
+  provider: prod-rackspace
   size: 2 GB Performance
   image: Debian 7 (Wheezy) (PVHVM)
 
-rackspace-wheezy-4GB:
-  provider: rackspace
+prod-rackspace-wheezy-4GB:
+  provider: prod-rackspace
   size: 4 GB Performance
   image: Debian 7 (Wheezy) (PVHVM)
 
-rackspace-wheezy-8GB:
-  provider: rackspace
+prod-rackspace-wheezy-8GB:
+  provider: prod-rackspace
+  size: 8 GB Performance
+  image: Debian 7 (Wheezy) (PVHVM)
+
+qa-rackspace-wheezy-1GB:
+  provider: qa-rackspace
+  size: 1 GB Performance
+  image: Debian 7 (Wheezy) (PVHVM)
+
+qa-rackspace-wheezy-2GB:
+  provider: qa-rackspace
+  size: 2 GB Performance
+  image: Debian 7 (Wheezy) (PVHVM)
+
+qa-rackspace-wheezy-4GB:
+  provider: qa-rackspace
+  size: 4 GB Performance
+  image: Debian 7 (Wheezy) (PVHVM)
+
+qa-rackspace-wheezy-8GB:
+  provider: qa-rackspace
   size: 8 GB Performance
   image: Debian 7 (Wheezy) (PVHVM)
