Add flush_mine_on_destroy to cloud profile

--- a/cloud.profiles.d/rackspace.conf
+++ b/cloud.profiles.d/rackspace.conf
@@ -2,38 +2,46 @@ prod-rackspace-wheezy-1GB:
   provider: prod-rackspace
   size: 1 GB Performance
   image: Debian 7 (Wheezy) (PVHVM)
+  flush_mine_on_destroy: True
 
 prod-rackspace-wheezy-2GB:
   provider: prod-rackspace
   size: 2 GB Performance
   image: Debian 7 (Wheezy) (PVHVM)
+  flush_mine_on_destroy: True
 
 prod-rackspace-wheezy-4GB:
   provider: prod-rackspace
   size: 4 GB Performance
   image: Debian 7 (Wheezy) (PVHVM)
+  flush_mine_on_destroy: True
 
 prod-rackspace-wheezy-8GB:
   provider: prod-rackspace
   size: 8 GB Performance
   image: Debian 7 (Wheezy) (PVHVM)
+  flush_mine_on_destroy: True
 
 qa-rackspace-wheezy-1GB:
   provider: qa-rackspace
   size: 1 GB Performance
   image: Debian 7 (Wheezy) (PVHVM)
+  flush_mine_on_destroy: True
 
 qa-rackspace-wheezy-2GB:
   provider: qa-rackspace
   size: 2 GB Performance
   image: Debian 7 (Wheezy) (PVHVM)
+  flush_mine_on_destroy: True
 
 qa-rackspace-wheezy-4GB:
   provider: qa-rackspace
   size: 4 GB Performance
   image: Debian 7 (Wheezy) (PVHVM)
+  flush_mine_on_destroy: True
 
 qa-rackspace-wheezy-8GB:
   provider: qa-rackspace
   size: 8 GB Performance
   image: Debian 7 (Wheezy) (PVHVM)
+  flush_mine_on_destroy: True
