--- a/cloud.profiles.d/rackspace.conf
+++ b/cloud.profiles.d/rackspace.conf
@@ -22,26 +22,27 @@ prod-rackspace-wheezy-8GB:
   image: Debian 7 (Wheezy) (PVHVM)
   flush_mine_on_destroy: True
 
-qa-rackspace-wheezy-1GB:
-  provider: qa-rackspace
-  size: 1 GB Performance
-  image: Debian 7 (Wheezy) (PVHVM)
-  flush_mine_on_destroy: True
-
-qa-rackspace-wheezy-2GB:
-  provider: qa-rackspace
-  size: 2 GB Performance
-  image: Debian 7 (Wheezy) (PVHVM)
-  flush_mine_on_destroy: True
-
-qa-rackspace-wheezy-4GB:
-  provider: qa-rackspace
-  size: 4 GB Performance
-  image: Debian 7 (Wheezy) (PVHVM)
-  flush_mine_on_destroy: True
-
-qa-rackspace-wheezy-8GB:
-  provider: qa-rackspace
-  size: 8 GB Performance
-  image: Debian 7 (Wheezy) (PVHVM)
-  flush_mine_on_destroy: True
+# qa-rackspace-wheezy-1GB:
+#   provider: qa-rackspace
+#   size: 1 GB Performance
+#   image: Debian 7 (Wheezy) (PVHVM)
+#   flush_mine_on_destroy: True
+# 
+# qa-rackspace-wheezy-2GB:
+#   provider: qa-rackspace
+#   size: 2 GB Performance
+#   image: Debian 7 (Wheezy) (PVHVM)
+#   flush_mine_on_destroy: True
+# 
+# qa-rackspace-wheezy-4GB:
+#   provider: qa-rackspace
+#   size: 4 GB Performance
+#   image: Debian 7 (Wheezy) (PVHVM)
+#   flush_mine_on_destroy: True
+# 
+# qa-rackspace-wheezy-8GB:
+#   provider: qa-rackspace
+#   size: 8 GB Performance
+#   image: Debian 7 (Wheezy) (PVHVM)
+#   flush_mine_on_destroy: True
+# 
