Disable QA cloud profiles

--- a/cloud.profiles.d/rackspace.conf
+++ b/cloud.profiles.d/rackspace.conf
@@ -22,7 +22,14 @@ prod-rackspace-wheezy-8GB:
   image: Debian 7 (Wheezy) (PVHVM)
   flush_mine_on_destroy: True
 
-# qa-rackspace-wheezy-1GB:
+###
+### To use QA instances, you need to create a seperate provider in /etc/salt/cloud.providers.d
+### The QA provider should have environment set to qa
+### It should use another cloud account than prod! Otherwise, salls to salt-cloud will confuse it (which image is qa/prod?)
+###
+### A cheap provider, like DigitalOcean, can be used for QA instances to optimize costs
+###
+#qa-rackspace-wheezy-1GB:
 #   provider: qa-rackspace
 #   size: 1 GB Performance
 #   image: Debian 7 (Wheezy) (PVHVM)
